fix(header): Fixed icon alignment

--- a/src/ws-header/ws-header.scss
+++ b/src/ws-header/ws-header.scss
@@ -86,6 +86,9 @@ $header-border-color: schema-color(4) !default;
         display: inline-block;
         margin-right: 5px;
       }
+      .icon {
+        vertical-align: middle;
+      }
     }
   }
   .level-2 {
